--- a/app.css
+++ b/app.css
@@ -11,6 +11,15 @@ body {
   padding:0;
   height:100%;
   background-color: #424242;
+  text-align: center;
+}
+
+header {
+  height 100px;
+  background: #dbdbdb;
+  width: 100%;
+  z-index: 10;
+  position:fixed;
 }
 
 .logo{
@@ -38,4 +47,24 @@ body {
    width:100%;
    height:60px;   /* Height of the footer */
    text-align: center;
+}
+
+.container2, .banner, .content{
+  text-align: center;
+}
+
+.banner{
+  width: 100%;
+  height: 500px;
+  position:fixed;
+  top: 100px;
+  background: #707070;
+}
+
+.content{
+  width:100%;
+  position:relative;
+  top: 400px;
+  background: #ebebeb;
+  height: 1500px;
 }
