--- a/app.css
+++ b/app.css
@@ -14,25 +14,18 @@ body {
   text-align: center;
 }
 
-header {
-  height 100px;
-  background: #dbdbdb;
-  width: 100%;
-  z-index: 10;
-  position:fixed;
-}
-
 .logo{
     text-align: center;
 }
 
-.container {
+.container, .container2 {
    min-height:100%;
    position:relative;
 }
 
 .header {
    padding:10px;
+
 }
 
 .body {
@@ -42,13 +35,29 @@ header {
    font-family:Impact, Charcoal, sans-serif ;
 }
 .footer {
-   position:absolute;
+/*position:absolute;
    bottom:0;
    width:100%;
-   height:60px;   /* Height of the footer */
+   height:60px;    Height of the footer
    text-align: center;
+   background: #fafafa;
+*/
+
+position: relative;
+ margin-top: -180px;
+ /* negative value of footer height */
+ height: 180px;
+ clear: both;
+ background-color: grey;
 }
 
+.header2{
+  height 100px;
+  width: 100%;
+  z-index: 10;
+  position:fixed;
+  background: #fafafa;
+}
 .container2, .banner, .content{
   text-align: center;
 }
